# quads-mcp

./: .containerignore  .env.example  .gitignore  Containerfile  Containerfile.distroless  Containerfile.multistage  Makefile  PUBLISHING.md  PYPI_CHECKLIST.md  README.md  podman-compose.yml  pyproject.toml  uvx-usage.md
claude_desktop_configs/: README.md  secure_ssl.json  self_signed_ssl_uvx.json
quads_mcp/: __init__.py  auth.py  config.py  server.py
quads_mcp/prompts/: quads_prompts.py
quads_mcp/resources/: quads_resources.py
quads_mcp/tools/: quads_tools.py
